--- a/NASA/depremapp/seismoscope/static/style.css
+++ b/NASA/depremapp/seismoscope/static/style.css
@@ -1,10 +1,9 @@
 #map { height: 400px; }
 #inputSonDeprem, #input-label,#sondeprembutton {
+  border: None;
   display: block;
 }
-.ortala {
-    text-align: center; /* Yatayda ortalama */
-}
+
 .horizontal-container {
   display: flex;
   justify-content: space-between;
@@ -24,7 +23,19 @@
 body {
   margin: 0;
   padding: 0;
+  padding: 0;
   font-family: Product Sans, sans-serif;
+}
+
+.ortala{
+  display: grid;
+  place-items: center; /* İçeriği dikey olarak ortala */
+  margin-top:-10px
+  
+}
+
+.ortala .item{
+  padding: 5px;
 }
 
 .container2 {
@@ -53,6 +64,8 @@ body {
 
   .right-content {
     width: 30%; /* Sol tarafın genişliği büyük ekranlarda 30% */
+    display: flex;
+    justify-content: space-between;
   }
 }
 
@@ -61,16 +74,21 @@ body {
     background-color: #2980b9; /* Fare üzerine gelindiğinde arka plan rengi */
 }
 
-.panel {
-  border: 1px solid #ccc; /* Panel kenarlığı */
-  padding: 20px; /* Panel iç boşluğu */
-  background-color: #c3c3c3; /* Panel arka plan rengi */
-  border-radius: 10px; /* Panel kenar yuvarlaklığı */
-  width: 800px; /* Panel genişliği */
-  margin: 20px auto; /* Paneli sayfanın ortasına al */
-  height: 500px;
-  
+.panel5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #cacaca;
+  width: 125px; /* İlk başta bir başlangıç genişliği belirleyin */
+  padding: 20px;
 }
+
+.panel5 .content {
+  flex: 1; /* İçeriğin boyutuna esneklik sağlayın */
+  overflow: auto; /* İçerik fazla uzunsa kaydırma çubuğu ekleyin */
+}
+
 
 .panel2 {
  
@@ -85,17 +103,16 @@ body {
   
 }
 
-
 .panel3 {
-  border: 1px solid #ccc; /* Panel kenarlığı */
+  border: 1px solid rgb(27, 26, 26); /* Panel kenarlığı */
   padding: 20px; /* Panel iç boşluğu */
-  background-color: #000000; /* Panel arka plan rengi */
+  background-color: white; /* Panel arka plan rengi */
   border-radius: 10px; /* Panel kenar yuvarlaklığı */
   width: 250px; /* Panel genişliği */
   margin: 20px auto; /* Paneli sayfanın ortasına al */
   height: 500px;
   overflow-y: auto;
-  color: rgb(255, 255, 255);
+  color: black;
 }
 
 .panel4 {
@@ -168,3 +185,210 @@ body {
 @media (min-width: 992px) {
     /* Stil tanımlamaları burada */
 }
+
+.arama-kutusu {
+  display: flex;
+  width: 100px; /* Arama kutusunun genişliği */
+}
+
+.arama-kutusu input[type="text"] {
+  height: 40px;
+  width: 150px; /* Yatay genişlik */
+  padding: 2px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-left: 5x;
+}
+
+.arama-kutusu button {
+  height: 40px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  margin-left: 5x;
+  margin-right: 0x;
+  font-size: 18px;
+}
+
+.arama-kutusu button:hover {
+  background-color: #acb5bb;
+}
+
+#mapselect {
+  padding: 5px;
+  font-size: 13px;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  
+}
+
+/* Seçeneklerin stilleri */
+#mapselect option {
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+/* Seçilen seçeneğin stilleri */
+#mapselect option:checked {
+  background-color: #007BFF;
+  color: #fff;
+}
+
+
+.panel5 {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #000;
+  width: 125px; /* İlk başta bir başlangıç genişliği belirleyin */
+  height: 450px;
+  padding: 20px;
+}
+
+.circle {
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin: 10px;
+  background-color: #fff;/* Beyaz iç daire rengi */
+}
+
+.circle img {
+  width: 60%; /* İkon boyutu */
+  height: auto;
+  filter: invert(1); /* İkon rengini beyaz yapmak için */
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+  padding-top: 60px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
+.userinfo {
+  margin-top: 40px;
+  margin-left: 40px;
+  margin-right: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #000;
+  width: 500px; /* İlk başta bir başlangıç genişliği belirleyin */
+  height: 450px;
+  padding: 20px;
+}
+.loader,
+.loader:after {
+    border-radius: 50%;
+    width: 10em;
+    height: 10em;
+}
+.loader {            
+    margin: 60px auto;
+    font-size: 10px;
+    position: relative;
+    text-indent: -9999em;
+    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+    border-left: 1.1em solid #ffffff;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load8 1.1s infinite linear;
+    animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes load8 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+#loadingDiv {
+    position:absolute;;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color:#000;
+}
+blog-post {
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+   
+    
+}
+
+.footer {
+  position: fixed;
+  z-index: 10000;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: white;
+  color: black;
+  text-align: center;
+}
+
+
+
