--- a/NASA/depremapp/seismoscope/templates/archive.html
+++ b/NASA/depremapp/seismoscope/templates/archive.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="https://cdn.discordapp.com/attachments/1153730509252337746/1159907407787470848/are_a_hub_for_creativity_innovation_and_imagination._These_studios_are_responsible_for_producing_some_of_the_most_groundbreaking_films_television_shows_and_other_forms_of_entertainment._From_H.png?ex=6532baf4&is=652045f4&hm=9f4438fa76ca8a870b4d20ac882e581dd26e604f25f4a258d1843916ca6463ce&" type="image/png"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SeismoScope - Web App</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <!-- CSS dosyasını bağlama -->
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"> <!-- CSS dosyasını bağlama -->
+    
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
@@ -14,7 +14,7 @@
 <body>
       <div class="ortala">
         <img src="https://cdn.discordapp.com/attachments/1159203617451028580/1160262887575666819/are_a_hub_for_creativity_innovation_and_imagination._These_studios_are_responsible_for_producing_some_of_the_most_groundbreaking_films_television_shows_and_other_forms_of_entertainment._From_H_2.png?ex=65340605&is=65219105&hm=a7984a4af84c9a6efa437bb8f830fc01ff3aebb9db6d981dcd393e3c6608bcfd&" alt="Logo" width="150" height="150">
-        <h1 class="custom-heading">SeismoScope V1.0</h1>
+        <h1 class="custom-heading">SeismoScope V0.1</h1>
         <center>
           <hr style="width: 13%;">
         </center>
@@ -27,21 +27,20 @@
           <form class="row g-3">
             <div class="col-auto">
               <select id="mapSelect" name="mapselect" class="form-select" aria-label="Default select example">
-                <option value="1">Last Earthquakes Map</option>
-                <option value="2">Archive Earthquake Map</option>
-                <option value="3">Live Fire Map</option>
-                <option value="4">EONET Map</option>
+                <option value="1">Arşiv Depremler Haritası</option>
+                <option value="2">Son Depremler Haritası</option>
+                <option value="3">Canlı Yangın Haritası</option>
+                <option value="4">EONET</option>
               </select>
             </div>
             <div class="col-auto">
-              <label for="inputPassword2" id="input-label" class="visually-hidden">En son kaç deprem gösterilsin</label>
-              <input type="number" min="1" class="form-control" id="inputPassword2" placeholder="Amount of earthquakes to show... (newest to oldest)">
+              <input type='text' class="form-control" id="dateselect" placeholder="YYYY-MM-DD"/>
             </div>
             <div class="col-auto">
-              <button type="submit" id="sondeprembutton" class="btn btn-success mb-3">Show</button>
+              <button id="sondeprembutton" class="btn btn-success mb-3">Show</button>
             </div>
             <div class="col-auto">
-              <button type="submit" id="refresh-button" class="btn btn-success mb-3">Refresh Map</button>
+              <button id="refresh-button" class="btn btn-success mb-3">Refresh Map</button>
             </div>
           </form>
 
@@ -50,7 +49,7 @@
       </div>
       <div class="right-content">
         <div class="panel3" id="lastEarthquakes">
-          <h2>Latest Earthquakes</h2>
+          <h2>Earthquakes that occurred on the specified date</h2>
           <form class="form-floating" class="arama-kutusu">
               <input type="text" class="form-control" id="floatingInputValue" placeholder="" value="">
               <label for="floatingInputValue">Search Earthquake</label>
@@ -70,15 +69,22 @@
             <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" viewBox="0 0 512 512"><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg>
           </div>
         </div>
-      </div>
         
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
+      
+        <div id="myModal" class="modal">
+          <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <div id="modalTitle"></div>
+            <div id="modalContent"></div>
+          </div>
+        </div>
+        
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+      <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
       <script src="{% static 'jq.min.js' %}"></script>
-      <script src="{% static 'script.js' %}"></script>
-      <div class="footer">
-        <p>© 2023 - TechCrafters Team</p>
-      </div>
+      <script src="{% static 'archivescript.js' %}"></script>
+      
 </body>
 </html>
