--- a/NASA/depremapp/seismoscope/templates/archive.html
+++ b/NASA/depremapp/seismoscope/templates/archive.html
@@ -27,9 +27,9 @@
           <form class="row g-3">
             <div class="col-auto">
               <select id="mapSelect" name="mapselect" class="form-select" aria-label="Default select example">
-                <option value="1">Arşiv Depremler Haritası</option>
-                <option value="2">Son Depremler Haritası</option>
-                <option value="3">Canlı Yangın Haritası</option>
+                <option value="1">Archive Earthquake Map</option>
+                <option value="2">Latest Earthquake Map</option>
+                <option value="3">Live Fire Map</option>
                 <option value="4">EONET</option>
               </select>
             </div>
