--- a/NASA/depremapp/seismoscope/templates/eonet.html
+++ b/NASA/depremapp/seismoscope/templates/eonet.html
@@ -26,9 +26,9 @@
           <div class="col-auto">
             <select id="mapSelect" name="mapselect" class="form-select" aria-label="Default select example">
               <option value="map1">EONET</option>
-              <option value="map2">Son Depremler Haritası</option>
-              <option value="map3">Arşiv Depremler Haritası</option>
-              <option value="map4">Canlı Yangın Haritası</option>
+              <option value="map2">Latest Earthquake Map</option>
+              <option value="map3">Archive Earthquake Map</option>
+              <option value="map4">Live Fire Map</option>
             </select>
           </div>
           <div class="col-auto">
