--- a/NASA/depremapp/seismoscope/templates/fire.html
+++ b/NASA/depremapp/seismoscope/templates/fire.html
@@ -25,9 +25,9 @@
           <form class="row g-3">
           <div class="col-auto">
             <select id="mapSelect" name="mapselect" class="form-select" aria-label="Default select example">
-              <option value="map1">Canlı Yangın Haritası</option>
-              <option value="map2">Son Depremler Haritası</option>
-              <option value="map3">Arşiv Depremler Haritası</option>
+              <option value="map1">Live Fire Map</option>
+              <option value="map2">Latest Earthquake Map</option>
+              <option value="map3">Archive Earthquake Map</option>
               <option value="map4">EONET</option>
             </select>
           </div>
